--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "konva": "^9.3.18",
-    "lucide-svelte": "^0.469.0"
+    "lucide-svelte": "^0.469.0",
+    "roughjs": "^4.6.6"
   }
 }
